// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.31.1

package db

import (
	"github.com/jackc/pgx/v5/pgtype"
)

type AiSession struct {
	ID            pgtype.UUID
	UserID        pgtype.UUID
	Command       string
	InputSummary  pgtype.Text
	OutputSummary pgtype.Text
	CreatedAt     pgtype.Timestamptz
}

type ConfirmationToken struct {
	ID        pgtype.UUID
	Email     string
	Token     string
	ExpiresAt pgtype.Timestamptz
	Used      pgtype.Bool
	CreatedAt pgtype.Timestamptz
}

type Note struct {
	ID          pgtype.UUID
	TaskID      pgtype.UUID
	ContentJson pgtype.Text
	CreatedAt   pgtype.Timestamptz
	UpdatedAt   pgtype.Timestamptz
}

type Task struct {
	ID               pgtype.UUID
	UserID           pgtype.UUID
	Title            string
	Description      pgtype.Text
	Status           pgtype.Text
	Priority         pgtype.Text
	EstimatedMinutes pgtype.Int4
	ColumnName       pgtype.Text
	Position         pgtype.Int4
	CreatedAt        pgtype.Timestamptz
	UpdatedAt        pgtype.Timestamptz
}

type TimeBlock struct {
	ID        pgtype.UUID
	UserID    pgtype.UUID
	TaskID    pgtype.UUID
	Date      pgtype.Date
	StartTime pgtype.Time
	EndTime   pgtype.Time
	Completed pgtype.Bool
	CreatedAt pgtype.Timestamptz
}

type User struct {
	ID             pgtype.UUID
	Email          string
	Name           string
	SupabaseID     pgtype.Text
	EmailConfirmed pgtype.Bool
	PasswordHash   string
	CreatedAt      pgtype.Timestamptz
	UpdatedAt      pgtype.Timestamptz
}
